--- a/src/App.css
+++ b/src/App.css
@@ -2,17 +2,6 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -24,15 +13,68 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.Title {
+  margin: 2rem;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+.row {
+  display: flex;
+  flex-direction: row;
+  min-width: 60%;
+  margin: 1em;
+  overflow: hidden;
+}
+
+.code-area {
+  -ms-overflow-style: none; /* for Internet Explorer, Edge */
+  scrollbar-width: none; /* for Firefox */
+  overflow-y: scroll;
+}
+
+.button {
+  align-items: center;
+  background-image: linear-gradient(144deg,#AF40FF, #5B42F3 50%,#00DDEB);
+  border: 0;
+  border-radius: 4rem;
+  box-shadow: rgba(151, 65, 252, 0.2) 0 1rem 2rem -0.5rem;
+  box-sizing: border-box;
+  color: #FFFFFF;
+  display: flex;
+  font-family: Phantomsans, sans-serif;
+  font-size: 1em;
+  justify-content: center;
+  line-height: 1em;
+  max-width: 100%;
+  min-width: 20%;
+  padding: 0.5rem;
+  margin-bottom: 2em;
+  text-decoration: none;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  white-space: nowrap;
+  cursor: pointer;
+}
+.button:active,
+.button:hover {
+  outline: 0;
+  transition: 1000ms;
+}
+.button span {
+  background-image: linear-gradient(144deg, #371450, #23195d 50%, #00373a);
+  padding: 1rem 1rem;
+  border-radius: 4rem;
+  width: 100%;
+  height: 100%;
+  transition: 1000ms;
+}
+.button:hover span {
+  background: none;
+  transition: 1000ms;
+}
+
+@media (max-width: 768px) {
+  .row {
+    flex-direction: column;
   }
 }
